# halovi

./: .gitignore  DOC.md  README.md  TIPS.md  TODO.md  future.scroll  halovi.cabal  stack.yaml  tst.scroll  tst2.scroll
app/: Main.hs
nm/: main.js  package.json
nvim/: api  api_info  pipe.py
src/: Halovi.hs  Nvim.hs  Parse.hs
