name:                halovi
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/halovi#readme
license:             BSD3
author:              BlackCap
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parse, Halovi, Nvim
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.0.0
                     , process
                     , monad-loops
                     , mtl
                     , transformers
                     , containers
                     , aeson
                     , bytestring
                     -- , data-msgpack
  default-language:    Haskell2010

executable halovi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , halovi
                     , process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blackcapcoder/halovi
